syntax = "proto3";

package org.brewchain.cwv.common.service;

enum PTNsdModule {
	NSD = 0;
};
enum PTNsdCommand {
	COL = 0; //获取国家列表-


};


message PBCountryList //COL
{
	string short_name = 1; //简称的模糊搜索
}

message PRetCountryList //COL
{
	string ret_code = 1; //返回状态码
	string ret_msg = 2; //返回消息
	message Countries {
		string domain_code = 1; //国际域名缩写
		string regin_code = 2; //地区代码
		string short_name = 3; //简称
		string full_name = 4; //全称
		string desc_en = 5; //英文描述
		string phone_code = 6; //电话代码
	}

	repeated Countries countries = 3;
}